# server

./: CMakeLists.txt  configure.cmake
client/: CMakeLists.txt  mysql.cc  mysqldump.c  mysqltest.cc
cmake/: iconv.cmake  make_dist.cmake.in  mariadb_connector_c.cmake  wsrep.cmake
cmake/build_configurations/: mysql_release.cmake
extra/: innochecksum.cc
include/: m_ctype.h  mysql.h  mysql.h.pp  mysql_com.h  thr_lock.h
libmariadb/: CMakeLists.txt
libmysql/: CMakeLists.txt
libmysqld/: CMakeLists.txt  lib_sql.cc
mysql-test/: mysql-test-run.pl
mysql-test/r/: bigint.result  create.result  ctype_binary.result  ctype_cp1251.result  ctype_latin1.result  ctype_ucs.result  ctype_utf32.result  ctype_utf8.result  default.result  dyncol.result  enforce_storage_engine.result  func_digest.result  func_gconcat.result  func_hybrid_type.result  func_math.result  func_weight_string.result  get_diagnostics.result  information_schema.result  insert.result  mysqlbinlog_row_minimal.result  mysqld--help.result  mysqldump.result  openssl_1.result  partition.result  partition_debug_sync.result  partition_explicit_prune.result  ps.result  ps_2myisam.result  ps_3innodb.result  ps_4heap.result  ps_5merge.result  select.result  select_jcl6.result  show_check.result  signal.result  ssl.result  ssl_compress.result  type_blob.result  type_decimal.result  (+5 more)
mysys/: thr_lock.c
sql/: CMakeLists.txt  datadict.cc  field.cc  field.h  handler.cc  handler.h  item.cc  item.h  item_cmpfunc.h  item_func.cc  item_func.h  item_geofunc.h  item_inetfunc.h  item_strfunc.h  item_sum.h  item_timefunc.h  item_windowfunc.cc  item_windowfunc.h  lock.cc  lock.h  log_event.cc  mdl.cc  mdl.h  mysqld.cc  mysqld.h  protocol.cc  rpl_mi.cc  rpl_parallel.cc  rpl_rli.cc  rpl_rli.h  session_tracker.cc  session_tracker.h  set_var.cc  signal_handler.cc  slave.cc  sp.cc  sp_head.cc  sp_head.h  sql_acl.cc  sql_acl.h  (+51 more)
sql-common/: client.c
strings/: decimal.c  my_vsnprintf.c
support-files/: compiler_warnings.supp
tests/: CMakeLists.txt  mysql_client_fw.c  mysql_client_test.c
(+255 files in other folders)
